--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,54 @@
-cmake_minimum_required(VERSION 3.10)
+# Copyright (c) 2019 Mathieu-André Chiasson
+# All rights reserved.
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
 
-include(cmake/Hunter/HunterGate.cmake)
+cmake_minimum_required(VERSION 3.0)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
+include(Hunter/HunterGate)
 HunterGate(
     URL "https://github.com/ruslo/hunter/archive/v0.23.165.tar.gz"
     SHA1 "5a73f91df5f6109c0bb1104d0c0ee423f7bece79"
     LOCAL
 )
 
-project(GAL
+project(gal
     VERSION 0.1
-    DESCRIPTION "Graphic Abstraction Layer - by Matt Chiasson"
+    DESCRIPTION "Graphic Abstraction Layer - by Mathieu-André Chiasson"
 )
 
-hunter_add_package(SPIRV-Headers)
+include(glslc)
+
+
+add_library(gal
+    src/gal.c
+)
+
+glslc(
+    TARGET gal
+    SHADER_FILES
+        src/shaders/default.vert
+        src/shaders/default.frag
+    GENERATE_GLSL
+    GENERATE_GLSL_ES
+    GENERATE_HLSL
+    GENERATE_MSL
+)
+
